--- a/application.yml
+++ b/application.yml
@@ -18,3 +18,6 @@ server:
 eureka:
   client:
     enabled: true
+spring:
+  rabbitmq:
+    addresses: amqps://hvifsdtz:CkikAY7BrnXSjbppG4yMmLFV8mtPXzjo@finch.rmq.cloudamqp.com/hvifsdtz
