--- a/resource-service.yml
+++ b/resource-service.yml
@@ -1,1 +1,5 @@
 
+spring:
+  data:
+    mongodb:
+      uri: mongodb://root:example@mongo:27017/learningdb?authSource=admin&retryWrites=true&w=majority
