--- a/resource-service.yml
+++ b/resource-service.yml
@@ -2,4 +2,4 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://root:example@mongo:27017/learningdb?authSource=admin&retryWrites=true&w=majority
+      uri: mongodb://root:example@mongo:27017/resourcedb?authSource=admin&retryWrites=true&w=majority
