--- a/application.yml
+++ b/application.yml
@@ -25,3 +25,11 @@ spring:
         password: admin
   rabbitmq:
     addresses: amqps://hvifsdtz:CkikAY7BrnXSjbppG4yMmLFV8mtPXzjo@finch.rmq.cloudamqp.com/hvifsdtz
+  sleuth:
+    enabled: true
+  zipkin:
+    baseUrl: http://zipkin-server:9411
+    locator:
+      discovery:
+        enabled: true
+    enabled: true
