--- a/training-service.yml
+++ b/training-service.yml
@@ -1,5 +1,5 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://root:example@mongo:27017/learningdb?authSource=admin&retryWrites=true&w=majority
+      uri: mongodb+srv://learningdb:painkiller@learning-docdb.cdgqj.mongodb.net/learningdb?retryWrites=true&w=majority
 
