--- a/training-service.yml
+++ b/training-service.yml
@@ -1,7 +1,7 @@
-spring:
-  data:
+training:
+  service:
     mongodb:
-      uri: mongodb+srv://learningdb:painkiller@learning-docdb.cdgqj.mongodb.net/learningdb?retryWrites=true&w=majority
+      clienturi: mongodb+srv://learningdb:painkiller@learning-docdb.cdgqj.mongodb.net/learningdb?retryWrites=true&w=majority
   servlet:
     multipart:
       max-file-size: 500KB
