update placeholder again

--- a/training-service.properties
+++ b/training-service.properties
@@ -1,4 +1,4 @@
-training.service.mongodb.clienturi=mongodb+srv://learningdb:painkiller@learning-docdb.cdgqj.mongodb.net/learningdb?retryWrites=true&w=majority
+training-mongodb.clienturi=mongodb+srv://learningdb:painkiller@learning-docdb.cdgqj.mongodb.net/learningdb?retryWrites=true&w=majority
 
 
 servlet.multipart.max-file-size=500KB
