--- a/training-service.properties
+++ b/training-service.properties
@@ -1,4 +1,6 @@
-training-mongodb.clienturi=mongodb+srv://learningdb:painkiller@learning-docdb.cdgqj.mongodb.net/learningdb?retryWrites=true&w=majority
+trainingservice.mongodburi=mongodb+srv://learningdb:painkiller@learning-docdb.cdgqj.mongodb.net/learningdb?retryWrites=true&w=majority
+trainingservice.maximum=Ayan
+trainingservice.minimum=Saha
 
 
 servlet.multipart.max-file-size=500KB
