--- a/training-service.properties
+++ b/training-service.properties
@@ -1,6 +1,6 @@
-trainingservice.mongodburi=mongodb+srv://learningdb:painkiller@learning-docdb.cdgqj.mongodb.net/learningdb?retryWrites=true&w=majority
-trainingservice.maximum=Ayan
-trainingservice.minimum=Saha
+training-service.mongodburi=mongodb+srv://learningdb:painkiller@learning-docdb.cdgqj.mongodb.net/learningdb?retryWrites=true&w=majority
+training-service.maximum=Ayan
+training-service.minimum=Saha
 
 
 servlet.multipart.max-file-size=500KB
