--- a/training-service.yml
+++ b/training-service.yml
@@ -5,7 +5,9 @@ spring:
   data:
     mongodb:
       uri: mongodb+srv://learningdb:painkiller@learning-docdb.cdgqj.mongodb.net/learningdb?retryWrites=true&w=majority
-
+  http:
+    multipart:
+      enabled: true
 servlet:
   multipart:
     max-file-size: 500KB
