--- a/gateway-service.yml
+++ b/gateway-service.yml
@@ -26,7 +26,7 @@ spring:
         - id: resource-service
           uri: lb://resource-service
           predicates:
-            - Path=/api/finance/**
+            - Path=/api/resource/**
           filters:
             - name: CircuitBreaker
               args:
