--- a/resource-service.yml
+++ b/resource-service.yml
@@ -2,4 +2,4 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://root:example@mongo:27017/resourcedb?authSource=admin&retryWrites=true&w=majority
+      uri: mongodb+srv://learningdb:painkiller@learning-docdb.cdgqj.mongodb.net/resource-service?retryWrites=true&w=majority
