--- a/resource-service.yml
+++ b/resource-service.yml
@@ -14,5 +14,6 @@ spring:
         format_sql: false
         show_sql: false
         use_sql_comments: false
+        dialect : org.hibernate.dialect.MySQLDialect
     hibernate:
       ddl-auto: none
