--- a/application.yml
+++ b/application.yml
@@ -13,7 +13,7 @@ spring:
     serialization:
       FAIL_ON_EMPTY_BEANS: false
   rabbitmq:
-    addresses: amqps://dhcxlxdj:70adYZsIy6jtiJY4_fuKtA3kkepE_wqe@puffin.rmq2.cloudamqp.com/dhcxlxdj
+    addresses: amqps://cedwxapv:ym2ek2aGvkAhuyoUXf8JP2GrhJBMBO8y@puffin.rmq2.cloudamqp.com/cedwxapv
   sleuth:
     enabled: true
   zipkin:
